<resources>
    <string name="app_name">SettingTest</string>
    <string name="setting">设置</string>
    <string name="offline">离线模式</string>
    <string name="sound">声音</string>
    <string name="test">测试</string>
    <string name="defaultW">默认</string>
    <string name="tip">侧音量键可控制来电、信息和通知的音量</string>
    <string name="system_ring">系统铃声</string>
    <string name="installed">已安装</string>
    <string name="all">全部</string>
    <string name="default_setting">默认应用设置</string>
    <string name="system_setting">修改系统设置</string>
    <string name="more_settings">更多设置</string>
    <string name="tip1">按大小排序</string>
    <string name="apps">应用程序</string>
    <string name="about_phone">关于手机</string>
    <string name="storage">存储</string>
    <string name="notify">通知</string>
    <string name="defaultOpen">默认打开</string>
    <string name="stop">强行停止</string>
    <string name="unInstall">卸载</string>
    <string name="tip2">默认应用偏好设置</string>
    <string name="all_storage">总计</string>
    <string name="clear_data">清除数据</string>
    <string name="app">应用</string>
    <string name="data">数据</string>
    <string name="catchW">缓存</string>
    <string name="clear_catch">清除缓存</string>
    <string name="sort_name">按名称排序</string>
    <string name="sort_size">按大小排序</string>
    <string name="app_message">应用程序信息</string>
    <string name="permission">权限</string>
    <string name="requestPermission">需要开启系统权限</string>
</resources>

