<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title" />

    <include layout="@layout/divider" />

    <include layout="@layout/item_app" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="@dimen/image_dimen">

        <Button
            android:text="@string/stop"
            android:textColor="@color/gray"
            android:id="@+id/id_stop"
            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:layout_marginEnd="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:src="@color/gray" />

        <Button
            android:text="@string/unInstall"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"

            />

    </LinearLayout>

    <include layout="@layout/divider" />

    <RelativeLayout
        android:id="@+id/id_storage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_dimen">

        <TextView
            android:focusable="false"

            android:id="@+id/id_title1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:padding="@dimen/list_padding"
            android:text="@string/storage"
            android:textColor="@color/black" />

        <TextView
            android:focusable="false"
            android:id="@+id/id_used"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/id_title1"
            android:layout_toStartOf="@+id/id_more1"
            android:gravity="center_vertical|end"
            android:maxLines="1"
            android:padding="@dimen/list_padding"
            tools:text="@string/test" />


        <ImageView
            android:focusable="false"

            android:id="@+id/id_more1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/list_padding"
            android:src="@mipmap/spinner_bt1" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/id_divider1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/list_padding"
        android:background="@drawable/divider_line" />


    <RelativeLayout
        android:id="@+id/id_notify"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_dimen">

        <TextView
            android:focusable="false"

            android:id="@+id/id_title2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:padding="@dimen/list_padding"
            android:text="@string/notify"
            android:textColor="@color/black" />

        <ImageView
            android:focusable="false"

            android:id="@+id/id_more2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/list_padding"
            android:src="@mipmap/spinner_bt1" />


    </RelativeLayout>

    <ImageView
        android:id="@+id/id_divider2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/list_padding"
        android:background="@drawable/divider_line" />


    <RelativeLayout
        android:id="@+id/id_open"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_dimen">

        <TextView
            android:focusable="false"

            android:id="@+id/id_title3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:padding="@dimen/list_padding"
            android:textColor="@color/black"
            android:text="@string/defaultOpen" />

        <TextView
            android:focusable="false"

            android:id="@+id/id_content3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/id_title3"
            android:layout_toStartOf="@+id/id_more"
            android:gravity="center_vertical|end"
            android:maxLines="1"
            android:padding="@dimen/list_padding"
            tools:text="@string/test" />


        <ImageView
            android:focusable="false"


            android:id="@+id/id_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/list_padding"
            android:src="@mipmap/spinner_bt1" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/id_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/list_padding"
        android:background="@drawable/divider_line" />


</LinearLayout>