<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title" />

    <include layout="@layout/divider" />

    <RelativeLayout
        android:id="@+id/id_installed"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_dimen">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:focusable="false"
            android:gravity="center_vertical"
            android:padding="@dimen/list_padding"
            android:text="@string/installed"
            android:textColor="@color/black" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:focusable="false"
            android:padding="@dimen/list_padding"
            android:src="@mipmap/spinner_bt1" />

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/list_padding"
        android:background="@drawable/divider_line" />

    <RelativeLayout
        android:id="@+id/id_all"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_dimen">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:focusable="false"
            android:gravity="center_vertical"
            android:padding="@dimen/list_padding"
            android:text="@string/all"
            android:textColor="@color/black" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:focusable="false"
            android:padding="@dimen/list_padding"
            android:src="@mipmap/spinner_bt1" />

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/list_padding"
        android:background="@drawable/divider_line" />

    <RelativeLayout
        android:id="@+id/id_default"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_dimen">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:focusable="false"
            android:gravity="center_vertical"
            android:padding="@dimen/list_padding"
            android:text="@string/default_setting"
            android:textColor="@color/black" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:focusable="false"
            android:padding="@dimen/list_padding"
            android:src="@mipmap/spinner_bt1" />

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/list_padding"
        android:background="@drawable/divider_line" />

    <RelativeLayout
        android:id="@+id/id_system"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_dimen">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:focusable="false"
            android:gravity="center_vertical"
            android:padding="@dimen/list_padding"
            android:text="@string/system_setting"
            android:textColor="@color/black" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:focusable="false"
            android:padding="@dimen/list_padding"
            android:src="@mipmap/spinner_bt1" />

    </RelativeLayout>


</LinearLayout>